major: add preferences user
